--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.freechain.block.Main</mainClass>
+                            <mainClass>com.blockchain.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
